# punklab-team.io

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
docs/: index.md
docs/development_flow/: deploy.md  development.md  index.md  system_design.md  technical_documentation.md
docs/guides/fundamental/: solid.md
docs/guides/technologies/: makefile.md
docs/infrastructure/: index.md
docs/static/css/: extra.css
docs/team/: index.md
