[tool.poetry]
name = "gpns-docs"
version = "0.1.0"
description = ""
authors = ["Andrukhov Aleksandr <drammtv@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.42"
mkdocs-panzoom-plugin = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
